fixed scroll-snap-align on starting page

--- a/src/assets/scss/_starting-page.scss
+++ b/src/assets/scss/_starting-page.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
+	scroll-snap-type: none;
 	background: linear-gradient(
 		180deg,
 		rgba(25, 54, 94, 1) 0%,
